# Mensabot

./: .dockerignore  .env.example  .gitignore  README.md  SETUP_README.md  Useful Links  Usefull Links  create-dev-cert.sh  docker-compose.yml  install.sh  package-lock.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: backend-ci.yaml  backend-ci.yml  frontend-ci.yml  stale.yml
backend/: .gitignore  Dockerfile  README.md
backend/apps/api_backend/: README.md  pyproject.toml
backend/apps/api_backend/src/mensa_api_backend/: .env.example  __init__.py  __main__.py  app.py  concurrency.py  config.py  i18n.py  logging.py  main.py  models.py  prompts.py  streaming.py
backend/apps/api_backend/src/mensa_api_backend/analytics/: __init__.py  store.py
backend/apps/api_backend/src/mensa_api_backend/api/: __init__.py  routes.py
backend/apps/api_backend/src/mensa_api_backend/locales/: de.json  en.json
backend/apps/api_backend/src/mensa_api_backend/routes/: canteens.py  chat.py  chat_ws.py  debug.py  project_stats.py  transcribe.py
backend/apps/api_backend/src/mensa_api_backend/services/: __init__.py  canteen_index.py  llm.py  time_context.py
backend/apps/api_backend/src/mensa_api_backend/tooling/: executor.py  filter_policy.py  judge.py  loop.py  mcp_dispatch.py  parsing.py  registry.py  ui_tools.py
backend/apps/api_backend/src/mensa_api_backend/tools/: __init__.py  canteen.py  definitions.py
backend/apps/mcp-server/: .env.example  README.md  pyproject.toml  run_mcp_server.sh
backend/apps/mcp-server/src/mensa_mcp_server/: __init__.py  __main__.py  cache.py  cache_keys.py  concurrency.py  metrics.py  osm_opening_hours.py  schemas.py  server.py  settings.py  tools_generic.py  tools_openmensa.py
backend/apps/mcp-server/src/mensa_mcp_server/services/: __init__.py  canteen_index.py  opening_hours.py  openmensa.py
backend/apps/mcp/mensa_mcp_server/: main.py  pyproject.toml
backend/apps/stt_server/: Dockerfile  README.md  pyproject.toml
backend/apps/stt_server/src/mensa_stt_server/: __main__.py  app.py  config.py  model_download.py  subprocesses.py
backend/libs/mensabot-backend-core/: README.md  pyproject.toml
backend/libs/mensabot-backend-core/src/mensabot_backend_core/: __init__.py  cache.py  cache_keys.py  canteen_index_service.py  canteen_service.py  dto.py  mappers.py  meal_enrichment.py  menu_service.py  opening_hours_service.py  openmensa_client.py  settings.py
backend/libs/mensabot-backend-core/src/mensabot_backend_core/osm/: __init__.py  client.py  queries.py  resolver.py  scoring.py
backend/libs/mensabot-common/: README.md  pyproject.toml
backend/libs/mensabot-common/src/mensabot_common/: __init__.py  version.py
backend/libs/openmensa/: README.md  pyproject.toml
backend/libs/openmensa/src/openmensa_sdk/: __init__.py  __main__.py  canteen_index.py  cli.py  client.py  errors.py  main.py  meta.py  models.py  utils.py
backend/scripts/: README.md  list_mcp_tools.py  sync_versions.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  offline.html  service-worker.js
frontend/src/: App.css  App.jsx  App.tsx  App.vue  declarations.d.ts  i18n.ts  index.css  main.jsx  main.tsx  service-worker.ts  vite-env.d.ts
frontend/src/app/: App.tsx  AppRoutes.tsx  i18n.ts
frontend/src/assets/: background - LightMode.xcf
frontend/src/assets/icons/: icons.tsx
frontend/src/components/: icons.tsx  iconsLogos.tsx
frontend/src/components/InputField/: InputField.css  InputField.tsx
frontend/src/components/Pill/: Pill.css  Pill.tsx
frontend/src/components/avatar/: Avatar.tsx
frontend/src/components/button/: button.styles.ts  button.tsx  button.types.ts
frontend/src/components/chat/: AiWarningText.tsx  BotMessage.tsx  CanteenSelector.tsx  Chat.tsx  ChatBubble.tsx  ChatInput.tsx  ChatMessages.tsx  ChatStreamingBubble.tsx  ChatWindow.tsx  FiltersEditor.tsx  MessageBubble.tsx  ScrollablePillRow.tsx  UserMessage.tsx  chat.styles.ts  chatCommands.ts  chatFormatting.ts  chatStreamState.ts  filterData.ts  useOnboarding.ts
frontend/src/components/header/: header.styles.ts  header.test.ts  header.tsx
frontend/src/components/install/: InstallInstructionsModal.tsx  InstallPromptCard.tsx  installCopy.ts  installPrompt.styles.ts
frontend/src/components/map/: CanteenMap.styles.ts  CanteenMap.tsx
frontend/src/components/modal/: ConfirmModal.tsx  Modal.tsx
frontend/src/components/page/: PageHero.styles.ts  PageSearch.styles.ts
frontend/src/components/shortcut/: ShortcutBar.tsx  ShortcutChip.tsx  ShortcutList.tsx  TooltipPortal.tsx  shortcuts.css
frontend/src/components/shortcuts/: ShortcutModal.tsx  shortcuts.styles.ts
frontend/src/components/sidebar/: sidebar.styles.ts  sidebar.tsx
frontend/src/components/ui/: PageLayout.styles.ts
frontend/src/features/chat/: ChatWorkspaceProvider.tsx  chatWorkspace.ts  useChatWorkspace.ts
frontend/src/hooks/: useShortcutStorage.ts
frontend/src/layouts/: AppShell.tsx  useAppShellContext.ts
frontend/src/pages/: Aboutpage.styles.ts  Aboutpage.tsx  CanteensPage.styles.ts  CanteensPage.tsx  ChatPage.tsx  Chatpage.styles.ts  Chatpage.tsx  ContactPage.styles.ts  ContactPage.tsx  HomePage.styles.ts  HomePage.tsx  LandingPage.tsx  Landingpage.styles.ts  Landingpage.tsx  LegalNoticePage.tsx  MapPage.styles.ts  MapPage.tsx  ProjectFactsPage.styles.ts  ProjectFactsPage.tsx  SettingsPage.styles.ts  SettingsPage.tsx  ShortcutsPage.tsx  ThemeDemo.tsx  chat.styles.ts  chat.tsx
frontend/src/services/: api.ts  apiClient.ts  chatMode.ts  chatStream.ts  chats.ts  maps.ts  onboarding.ts  preferences.ts  shortcuts.ts
frontend/src/theme/: colors.ts  styled.d.ts  themeProvider.tsx  useTheme.ts
frontend/src/types/: navigation.ts
mensabot-mcp-server/backend/: .gitignore
mensabot-mcp-server/backend/src/: demo_openmensa.py  openmensa.py
nginx/: .gitignore  Dockerfile  generate_auth.sh  nginx.conf
setup/: .gitignore  README.md  create-dev-cert.sh  requirements.txt  setup.py
(+91 files in other folders)
