[project]
name = "mensa-mcp-server"
version = "1.0.1"
description = "MCP server exposing OpenMensa / MensaBot tools."
keywords = ["mensabot", "tu-berlin", "mensa", "mcp", "mcp-server"]
readme = "README.md"
authors = [
    { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" }
]
maintainers = [
  { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" },
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.4",
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "mensabot-common",
    "openmensa-sdk",
    "pydantic>=2.12.5",
]

[project.scripts]
mensa-mcp-server = "mensa_mcp_server.__main__:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
mensabot-common = { path = "../../libs/mensabot-common", editable = true }
openmensa-sdk = { path = "../../libs/openmensa", editable = true }
