[project]
name = "mensa-stt-server"
version = "1.0.1"
description = "Local speech-to-text (STT) service for Mensabot using whisper.cpp"
keywords = ["mensabot", "stt", "speech-to-text", "whisper", "whisper.cpp"]
readme = "README.md"
authors = [
  { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" },
]
maintainers = [
  { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" },
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "pydantic-settings>=2.10.0",
  "uvicorn>=0.40.0",
]

[project.scripts]
mensa-stt-server = "mensa_stt_server.__main__:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
