[project]
name = "mensabot-backend-core"
version = "1.0.1"
description = "Shared backend infrastructure and domain services for Mensabot."
authors = [
  { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" },
]
maintainers = [
  { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" },
]
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.12.1",
  "httpx>=0.28.1",
  "mensabot-common",
  "openmensa-sdk",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
mensabot-common = { path = "../mensabot-common", editable = true }
openmensa-sdk = { path = "../openmensa", editable = true }
