[project]
name = "openmensa-sdk"
version = "1.1.0"
description = "Typed OpenMensa API v2 wrapper (dataclasses, stable to_dict, pagination)."
keywords = ["openmensa", "api", "sdk", "canteen", "mensa"]
readme = "README.md"
authors = [
    { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" }
]
maintainers = [
  { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" },
]
requires-python = ">=3.11"
dependencies = [
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
]

[project.scripts]
openmensa = "openmensa_sdk.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.12"]
build-backend = "uv_build"
