[project]
name = "mensa-mcp-server"
version = "0.1.0"
description = "MCP server exposing OpenMensa / MensaBot tools."
keywords = ["mensabot", "tu-berlin", "mensa", "mcp", "mcp-server"]
readme = "README.md"
authors = [
    { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" }
]
maintainers = [
  { name = "Tobias Veselsky", email = "veselsky@tu-berlin.de" },
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mensa-mcp-server = "mensa_mcp_server.__main__:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"